apps/xpartla-pharmacy-webapi/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xpartla-pharmacy-webapi
spec:
  parentRefs:
    - name: wac-hospital-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /xpartla-api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api
      backendRefs:
        - group: ""
          kind: Service
          name: xpartla-pharmacy-webapi
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /xpartla-openapi-ui
      backendRefs:
        - group: ""
          kind: Service
          name: xpartla-openapi-ui
          port: 80
    - matches:
        - path:
            type: Exact
            value: /xpartla-openapi
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              replaceFullPath: /openapi
      backendRefs:
        - group: ""
          kind: Service
          name: xpartla-pharmacy-webapi
          port: 80
